fixing template tags for 1.3

--- a/templates/blog/home_page.html
+++ b/templates/blog/home_page.html
@@ -1,5 +1,5 @@
 {% extends "site_base.html" %}
-{% load markup %}
+{% load markup_tags %}
 {% load tagging_tags %}
 {% load markup_tags %}
 {% load comparison %}
