--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load compress %}
-{% load flickr %}
 {% load disqus_tags %}
 
 <!DOCTYPE html>
@@ -9,15 +8,11 @@
     <title>{% block page_title %}Greg Newman - artist. designer. developer.{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
-    {% compress css %}
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" media="screen" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" media="screen" />
     {% block css_extra %}{% endblock %}
-    {% endcompress %}
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/modernizr.min.js"></script>
-    <script src="http://mint.gregnewman.org/?js" type="text/javascript"></script>
-    <script src="http://tweetboard.com/gregnewman/tb.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/modernizr.min.js"></script>
     {% block js_extra %}{% endblock %}
     {% disqus_dev %}
     <link href="http://feeds.feedburner.com/gregnewman-combined" title="Combined Feed" rel="alternate" type="application/rss+xml" />
