--- a/templates/base.html
+++ b/templates/base.html
@@ -1,51 +1,79 @@
-{% load compress %}
 {% load disqus_tags %}
 
-<!DOCTYPE html>
-<html>
+<!doctype html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block page_title %}Greg Newman - artist. designer. developer.{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Greg Newman: Illustrator, Designer, Hacker</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" media="screen" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" media="screen" />
+
+    <meta name="description" content="Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings.">
+    <meta name="author" content="Greg Newman">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <!-- CSS concatenated and minified via ant build script-->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css">
+    <!-- end CSS-->
+
     {% block css_extra %}{% endblock %}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/modernizr.min.js"></script>
     {% block js_extra %}{% endblock %}
     {% disqus_dev %}
+
+    <!-- TODO: CHANGE THIS!! -->
     <link href="http://feeds.feedburner.com/gregnewman-combined" title="Combined Feed" rel="alternate" type="application/rss+xml" />
-    <link href="http://feeds.feedburner.com/gregnewman-art" title="Art Feed" rel="alternate" type="application/rss+xml" />
-    <link href="http://feeds.feedburner.com/gregnewman-code" title="Code Feed" rel="alternate" type="application/rss+xml" />
-    <link href="http://feeds.feedburner.com/gregnewman-photography" title="Photography Feed" rel="alternate" type="application/rss+xml" />
+    <script src="{{ STATIC_DEV }}js/modernizr-2.0.6.min.js"></script>
 </head>
-<body id="gregnewman-com" class="{% block body-class %}base{% endblock %}">
-    <section class="column1">
-        <header>
-            <h1><span>artist designer developer</span><a href="/journal/">gregnewman</a></h1>
-        </header>
-        <div class="meta">
-            {% block meta %}{% endblock %}
+
+<body id="gregnewman-org" class="{% block body-class %}base{% endblock %}">
+    <div id="container">
+        <div class="top-banner">
+            <div class="top-banner-content">
+                <span class="title">Illustrator ~ Artist ~ Hacker</span>
+                <div class="social">
+                    <span class="twitter"><a href=""></a></span>
+                    <span class="dribbble"><a href=""></a></span>
+                    <span class="facebook"><a href=""></a></span>
+                    <span class="flickr"><a href=""></a></span>
+                    <span class="behance"><a href=""></a></span>
+                </div>
+            </div>
         </div>
-    </section>
 
-    <section class="column2">
-        {% block body %}{% endblock %}
-    </section>
+        <header>
+        <span class="gnewman"><img src="{{ STATIC_URL }}img/logo.png" /></span>
+            <div class="navbar">
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li> 
+                    <li><a href="">Work</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Store</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+            <div class="banners"><img src="{{ STATIC_URL }}img/page-banner-01.png" /><div>
+        </header>
 
-    <section class="column3">
-        {% block aside %}{% endblock %}
-    <section>
+        <div id="main" role="main">
+            {% block content %}{% endblock %}
+        </div>
+
+        <footer>
+            &copy;2010 Greg Newman, All Rights Reserved.<br />Content, site design, images and illustrations may not be reproduced without written permission from Greg.
+        </footer>
+    </div> <!--! end of #container -->
+
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <script> // Change UA-XXXXX-X to be your site's ID
+        window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+        Modernizr.load({
+          load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
+        });
+    </script>
+  
 </body>
 </html>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12316735-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
