--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- CSS concatenated and minified via ant build script-->
+    <script type="text/javascript" src="http://use.typekit.com/wmv5dmj.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css">
-    <!-- end CSS-->
 
     {% block css_extra %}{% endblock %}
     {% block js_extra %}{% endblock %}
