--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -71,9 +71,9 @@ html, body {
 }
 
 body {
-    font-family: 'FanwoodRegular';
-    font-weight: normal;
-    font-size: 17px;
+    font-family: linden-hill-1,linden-hill-2,sans-serif;
+    font-style: normal;
+    font-weight: 400;
     line-height: 1.7em;
     color: #e3d2bf;
 }
@@ -106,10 +106,11 @@ footer {
 .top-banner {
     width: 100%;
     height: 70px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     background: url(../img/top-banner-full-bg.png) repeat-x center;
-    font-size: 18px;
-    font-family: 'LindenHillItalic';
+    font-family: linden-hill-1,linden-hill-2,sans-serif;
+    font-style: italic;
+    font-weight: 400;    
 }
 
 .title {
@@ -208,7 +209,7 @@ span.behance a:hover {
 }
 
 .entry {
-    font-family: 'FanwoodRegular';
+    font-family: 'fanwood-1, fanwood-2';
     font-size: 17px;
 }
 
@@ -219,6 +220,12 @@ span.behance a:hover {
     font-weight: normal;
     color: #e3d2bf;
     text-decoration: none;
+}
+
+.entry-date {
+    float: right;
+    color: #b6764c;
+    font-size: 400;
 }
 
 .entry img {
