--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -104,7 +104,7 @@ td { vertical-align: top; }
 /* ==|== primary styles ===================================================== Author: Greg Newman  ========================================================================== */
 html, body { background: #282120; }
 
-body { font-family: 'FanwoodRegular'; font-weight: normal; font-size: 17px; line-height: 1.7em; color: #e3d2bf; }
+body { font-family: linden-hill-1, linden-hill-2, sans-serif; font-style: normal; font-weight: 400; line-height: 1.7em; color: #e3d2bf; }
 
 a:link, a:visited { color: #fff; text-decoration: none; font-style: italic; }
 
@@ -114,7 +114,7 @@ a:link, a:visited { color: #fff; text-decoration: none; font-style: italic; }
 
 footer { height: 70px; }
 
-.top-banner { width: 100%; height: 70px; margin-bottom: 25px; background: url(../img/top-banner-full-bg.png) repeat-x center; font-size: 18px; font-family: 'LindenHillItalic'; }
+.top-banner { width: 100%; height: 70px; margin-bottom: 10px; background: url(../img/top-banner-full-bg.png) repeat-x center; font-family: linden-hill-1, linden-hill-2, sans-serif; font-style: italic; font-weight: 400; }
 
 .title { display: block; width: 250px; position: absolute; top: 10px; left: 0; }
 
@@ -154,9 +154,11 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 #main { padding-bottom: 70px; }
 
-.entry { font-family: 'FanwoodRegular'; font-size: 17px; }
+.entry { font-family: 'fanwood-1, fanwood-2'; font-size: 17px; }
 
 .entry h3, .entry h3 a { font-size: 30px; font-family: 'LindenHillRegular'; font-weight: normal; color: #e3d2bf; text-decoration: none; }
+
+.entry-date { float: right; color: #b6764c; font-size: 400; }
 
 .entry img { border: 15px solid #fff; }
 
