--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 
     <script type="text/javascript" src="http://use.typekit.com/wmv5dmj.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    
     <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css">
 
     {% block css_extra %}{% endblock %}
@@ -33,11 +34,11 @@
             <div class="top-banner-content">
                 <span class="title">Illustrator ~ Artist ~ Hacker</span>
                 <div class="social">
-                    <span class="twitter"><a href=""></a></span>
-                    <span class="dribbble"><a href=""></a></span>
-                    <span class="facebook"><a href=""></a></span>
-                    <span class="flickr"><a href=""></a></span>
-                    <span class="behance"><a href=""></a></span>
+                    <span class="twitter"><a href="http://twitter.com/gregnewman"></a></span>
+                    <span class="dribbble"><a href="http://dribbble.com/newman"></a></span>
+                    <span class="facebook"><a href="http://facebook.com/newman.greg"></a></span>
+                    <span class="flickr"><a href="http://www.flickr.com/photos/busyashell/"></a></span>
+                    <span class="behance"><a href="http://www.behance.net/gregnewman"></a></span>
                 </div>
             </div>
         </div>
