--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,9 @@
         </div>
 
         <footer>
-            &copy;2010 Greg Newman, All Rights Reserved.<br />Content, site design, images and illustrations may not be reproduced without written permission from Greg.
+            <div class="footer-block">
+                &copy;2010 Greg Newman, All Rights Reserved.<br />Content, site design, images and illustrations may not be reproduced without written permission from Greg.
+            </div>
         </footer>
     </div> <!--! end of #container -->
 
