--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>Greg Newman: Illustrator, Designer, Hacker</title>
-    <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
 
-    <meta name="description" content="Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings.">
+    <meta name="description" content="Greg Newman is an artist, illustrator, designer and python developer located in Charlotte, NC.  Specializing in portrait, wildlife and caricature illustrations and paintings. {% block meta_description %}{% endblock %}">
     <meta name="author" content="Greg Newman">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
