--- a/templates/base.html
+++ b/templates/base.html
@@ -46,10 +46,10 @@
         <span class="gnewman"><img src="{{ STATIC_URL }}img/logo.png" /></span>
             <div class="navbar">
                 <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Blog</a></li> 
-                    <li><a href="">Work</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="/about/">About</a></li>
+                    <li><a href="/journal/">Blog</a></li> 
+                    <li><a href="/work/">Work</a></li>
+                    <li><a href="/contact/">Contact</a></li>
                     <li><a href="">Store</a></li>
                 </ul>
             </div>
