--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,10 @@
         </div>
 
         <header>
-        <span class="gnewman"><img src="{{ STATIC_URL }}img/logo.png" /></span>
+        <span class="gnewman"><a href="/"><img src="{{ STATIC_URL }}img/logo.png" /></a></span>
             <div class="navbar">
                 <ul>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/about/">About</a></li>
                     <li><a href="/journal/">Blog</a></li> 
                     <li><a href="/work/">Work</a></li>
