body font change

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -221,8 +221,9 @@ span.behance a:hover {
 }
 
 .entry {
-    font-family: 'fanwood-1, fanwood-2';
+    font-family: 'calluna-1, calluna-2';
     font-size: 17px;
+    font-weight: 700;
 }
 
 .entry h3,
