--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -71,9 +71,9 @@ html, body {
 }
 
 body {
-    font-family: fanwood-1,fanwood-2,sans-serif;
+    font-family: calluna-1,calluna-2,sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 17px;
     line-height: 1.7em;
     color: #e3d2bf;
