--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -104,7 +104,7 @@ td { vertical-align: top; }
 /* ==|== primary styles ===================================================== Author: Greg Newman  ========================================================================== */
 html, body { background: #282120; }
 
-body { font-family: fanwood-1, fanwood-2, sans-serif; font-style: normal; font-weight: 500; font-size: 17px; line-height: 1.7em; color: #e3d2bf; }
+body { font-family: calluna-1, calluna-2, sans-serif; font-style: normal; font-weight: 400; font-size: 17px; line-height: 1.7em; color: #e3d2bf; }
 
 a:link, a:visited { color: #fff; text-decoration: none; }
 
