--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -190,9 +190,9 @@ span.behance a:hover {
 }
 
 .navbar ul {
-    font-family: fanwood-1,fanwood-2,sans-serif;
+    font-family: coquette-1,coquette-2,fantasy;
     font-style: normal;
-    font-weight: 500; 
+    font-weight: 400;
     font-size: 18px;
     width: 500px;
     padding: 0;
