--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -146,7 +146,7 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .gnewman { float: left; }
 
-.navbar ul { font-family: fanwood-1, fanwood-2, sans-serif; font-style: normal; font-weight: 500; font-size: 18px; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
+.navbar ul { font-family: coquette-1, coquette-2, fantasy; font-style: normal; font-weight: 400; font-size: 18px; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
 
 .navbar ul li { display: inline; padding: 0 10px; }
 
