--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -230,9 +230,9 @@ span.behance a:hover {
 .entry h3 a,
 article h2,
 article h2 a {
-    font-family: linden-hill-1,linden-hill-2,sans-serif;
-    font-style: normal !important;
-    font-weight: 400;    
+    font-family: coquette-1,coquette-2,fantasy;
+    font-style: normal;
+    font-weight: 700;
     font-size: 30px;
     color: #e3d2bf !important;
     text-decoration: none;
