date and comment font

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -239,9 +239,9 @@ article h2 a {
 }
 
 .entry-date {
-    font-family: fanwood-1,fanwood-2,sans-serif;
+    font-family: neuzon-1,neuzon-2,sans-serif;
     font-style: normal;
-    font-weight: 500;    
+    font-weight: 400;
     font-size: 18px;
     float: right;
     color: #b6764c;
@@ -256,9 +256,9 @@ article h2 a {
     float: right;
     background: url(../img/icon-comment.png) no-repeat left;
     padding-left: 20px;
-    font-family: fanwood-1,fanwood-2,sans-serif;
+    font-family: neuzon-1,neuzon-2,sans-serif;
     font-style: normal;
-    font-weight: 500; 
+    font-weight: 400;
     font-size: 14px;
 }
 
