--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -123,6 +123,9 @@ article {
 }
 
 .title {
+    font-family: neuzon-1,neuzon-2,sans-serif;
+    font-style: normal;
+    font-weight: 400;
     display: block;
     width: 250px;
     position: absolute;
