--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -118,7 +118,7 @@ article { margin-bottom: 100px; }
 
 .top-banner { width: 100%; height: 70px; margin-bottom: 10px; background: url(../img/top-banner-full-bg.png) repeat-x center; font-family: linden-hill-1, linden-hill-2, sans-serif; font-style: italic; font-weight: 400; }
 
-.title { display: block; width: 250px; position: absolute; top: 10px; left: 0; }
+.title { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; display: block; width: 250px; position: absolute; top: 10px; left: 0; }
 
 .social { position: absolute; top: 8px; right: 0; }
 
