--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -123,11 +123,12 @@ article {
 }
 
 .title {
-    font-family: neuzon-1,neuzon-2,sans-serif;
+    font-family: coquette-1,coquette-2,fantasy;
     font-style: normal;
     font-weight: 400;
+    font-size: 12px;
     display: block;
-    width: 250px;
+    width: 350px;
     position: absolute;
     top: 10px;
     left: 0;
