--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -104,7 +104,7 @@ td { vertical-align: top; }
 /* ==|== primary styles ===================================================== Author: Greg Newman  ========================================================================== */
 html, body { background: #282120; }
 
-body { font-family: calluna-1, calluna-2, sans-serif; font-style: normal; font-weight: 400; font-size: 17px; line-height: 1.7em; color: #e3d2bf; }
+body { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 300; font-size: 17px; line-height: 1.7em; color: #e3d2bf; }
 
 a:link, a:visited { color: #fff; text-decoration: none; }
 
@@ -118,7 +118,7 @@ article { margin-bottom: 100px; }
 
 .top-banner { width: 100%; height: 70px; margin-bottom: 10px; background: url(../img/top-banner-full-bg.png) repeat-x center; font-family: linden-hill-1, linden-hill-2, sans-serif; font-style: italic; font-weight: 400; }
 
-.title { font-family: coquette-1, coquette-2, fantasy; font-style: normal; font-weight: 400; font-size: 18px; display: block; width: 350px; position: absolute; top: 10px; left: 0; }
+.title { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 700; font-size: 18px; display: block; width: 350px; position: absolute; top: 10px; left: 0; }
 
 .social { position: absolute; top: 8px; right: 0; }
 
@@ -146,7 +146,7 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .gnewman { float: left; }
 
-.navbar ul { font-family: coquette-1, coquette-2, fantasy; font-style: normal; font-weight: 400; font-size: 18px; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
+.navbar ul { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 300; font-size: 18px; width: 500px; padding: 0; margin: 15px 0 0 0; list-style: none; float: right; text-align: right; }
 
 .navbar ul li { display: inline; padding: 0 10px; }
 
@@ -156,9 +156,9 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 #main { padding-bottom: 70px; }
 
-.entry { font-family: 'calluna-1, calluna-2'; font-size: 17px; font-weight: 700; }
+.entry { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 300; font-size: 17px; }
 
-.entry h3, .entry h3 a, article h2, article h2 a { font-family: coquette-1, coquette-2, fantasy; font-style: normal; font-weight: 400; font-size: 30px; color: #e3d2bf !important; text-decoration: none; }
+.entry h3, .entry h3 a, article h2, article h2 a { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 700; font-size: 30px; color: #e3d2bf !important; text-decoration: none; }
 
 .entry-date { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
 
