--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -102,7 +102,7 @@ a:visited {
 }
 
 #container {
-    background: url(../img/page-bg.png) repeat;
+    background: url(../img/page-bg-dark.png) repeat;
     border-bottom: 1px solid #000;
 }
 
