--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -251,6 +251,11 @@ article h2 a {
     text-decoration: none;
 }
 
+.excerpt-img {
+    float: left;
+    margin-right: 20px;
+}
+
 .entry-date {
     font-family: neuzon-1,neuzon-2,sans-serif;
     font-style: normal;
