--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -160,6 +160,8 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .entry h3, .entry h3 a, article h2, article h2 a { font-family: calluna-1, calluna-2, serif; font-style: normal; font-weight: 700; font-size: 30px; color: #e3d2bf !important; text-decoration: none; }
 
+.excerpt-img { float: left; margin-right: 20px; }
+
 .entry-date { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
 
 .continue { display: block; text-align: right; }
