--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
         </div>
 
         <footer>
+            <img src="{{ STATIC_URL }}img/skull.png" class="skull" />
             <div class="footer-block">
                 &copy;2010 Greg Newman, All Rights Reserved.<br />Content, site design, images and illustrations may not be reproduced without written permission from Greg.
             </div>
