match to social icons

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -304,7 +304,7 @@ article h2 a {
     -webkit-border-radius: 5px;
     border-radius: 5px;
     border: 8px solid #e3d2bf;
-    background: #554a3d;
+    background: #5a4d3f;
     padding: 20px;
 }
 
