--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -176,7 +176,7 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .entry img { border: 15px solid #fff; }
 
-.entry-disqus { -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; border: 8px solid #e3d2bf; background: #554a3d; padding: 20px; }
+.entry-disqus { -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; border: 8px solid #e3d2bf; background: #5a4d3f; padding: 20px; }
 
 .entry-disqus h2 { margin: 10px 0 20px 0; }
 
