remove distractions for now

--- a/templates/blog/home_page.html
+++ b/templates/blog/home_page.html
@@ -23,6 +23,7 @@
         <p>Currently there are no entries in that Journal.  Please check back yo!</p>
     {% endif %}
 
+    {% comment %}
     <section class="sidebar">
         <h2>Distractions</h2>
         {% for distraction in distractions %}
@@ -32,6 +33,7 @@
         </div>
         {% endfor %}
     </section>
+    {% endcomment %}
     
     <div class="clearfix"></div>
     
