--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -276,6 +276,10 @@ article h2 a {
     text-decoration: none;
 }
 
+.divider {
+    text-align: center;
+}
+
 .excerpt-img {
     float: left;
     margin-right: 20px;
