--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -162,6 +162,8 @@ span.behance a:hover { background: url(../img/social-sprites.png) -160px 28px; }
 
 .entry h3, .entry h3 a, article h2, article h2 a { font-family: abril-display-1, abril-display-2, sans-serif; font-style: normal; font-weight: 400; font-size: 24px; color: #e3d2bf !important; text-decoration: none; }
 
+.divider { text-align: center; }
+
 .excerpt-img { float: left; margin-right: 20px; }
 
 .entry-date { font-family: neuzon-1, neuzon-2, sans-serif; font-style: normal; font-weight: 400; font-size: 11px; float: right; color: #b6764c; }
