--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -16,6 +16,20 @@
             {{ entry.body|apply_markup:entry.markup }}
         </div>
         <div class="entry-extra">
+            <div class="social">
+                <!-- Place this tag where you want the +1 button to render -->
+                <g:plusone annotation="inline"></g:plusone>
+
+                <!-- Place this render call where appropriate -->
+                <script type="text/javascript">
+                  (function() {
+                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                    po.src = 'https://apis.google.com/js/plusone.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                  })();
+                </script>
+            </div>
+
             {% tags_for_object entry as tags %}
             {% if tags %}
                <span>Tagged<br /> 
